--- a/css/styles.css
+++ b/css/styles.css
@@ -50,12 +50,11 @@ body {
   background-color: gray;
 }
 
-.swiper-pagination-bullet-active {
-  width: 12px;
-  height: 12px;
-  background-color: coral;
-}
-
-.swiper-cube .swiper-slide {
-  height: 800px;
-}
+/* .swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after {
+  content: "";
+  width: 40px;
+  height: 40px;
+  display: block;
+  background-color: purple;
+} */
