--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,10 @@ body {
 }
 
 .wrapper {
-  width: 600px;
+  width: 1200px;
   outline: 2px solid red;
   margin: 0 auto;
+  padding-bottom: 100px;
 }
 
 .item {
@@ -52,7 +53,14 @@ body {
   background-color: gray;
 }
 
-.swiper-button-next:after,
-.swiper-rtl .swiper-button-prev:after {
-  content: '\27A4';
+/* swiper */
+
+.swiper-pagination-bullet {
+  width: 13px;
+  height: 13px;
+}
+
+.swiper-pagination-bullet-active {
+  width: 20px;
+  border-radius: 50px;
 }
